fix vertical alignment

--- a/src/styles/hrroomtable.css
+++ b/src/styles/hrroomtable.css
@@ -1,10 +1,13 @@
 td {
-  font-size: 18px;
+  font-size: 14px;
+  vertical-align: middle;
 }
+
 
 .room-name {
   color: #337ab7;
   cursor: pointer;
+  font-size: 18px;
 }
 
 .link {
